--- a/about.html
+++ b/about.html
@@ -10,13 +10,22 @@
 </head>
 <body>
     <header class="heading">
-        <h3>About</h3>
+        <h3 class="head-text">About</h3>
     </header>
-    <main>
+    <main class="container">
 
     </main>
     <footer>
-
+    </div>
+    <h1>Contact</h1>
+    <br>
+    <div class="contact">
+        <img src="./assets/facebook-circle-fill.png" alt="fb icon" />
+        <img src="./assets/instagram-fill.png" alt="insta icon" />
+        <img src="./assets/twitter-fill.png" alt="twitter icon" />
+        <img src="./assets/linkedin-box-fill.png" alt="linkedln icon" />
+    </div>
+    <br>
     </footer>
 </body>
 </html>
