--- a/precaution.html
+++ b/precaution.html
@@ -10,13 +10,24 @@
 </head>
 <body>
     <header class="heading">
-        <h1>Precautions</h1>
+        <h1 class="head-text">Precautions</h1>
     </header>
-    <main>
+    <main class="container">
+        <div class="prec-image">
 
+        </div>
     </main>
-    <footer>
-        
+    <footer class="foot">
+    </div>
+    <h1>Contact</h1>
+    <br>
+    <div class="contact">
+        <img src="./assets/facebook-circle-fill.png" alt="fb icon" />
+        <img src="./assets/instagram-fill.png" alt="insta icon" />
+        <img src="./assets/twitter-fill.png" alt="twitter icon" />
+        <img src="./assets/linkedin-box-fill.png" alt="linkedln icon" />
+    </div>
+    <br>  
     </footer>
 </body>
 </html>
