Symptoms and precautions added

--- a/precaution.html
+++ b/precaution.html
@@ -13,8 +13,28 @@
         <h1 class="head-text">Precautions</h1>
     </header>
     <main class="container">
-        <div class="prec-image">
-
+      
+        <div class="prec-icons">
+            <div id="icon" class="mask">
+                <img src="./assets/face-mash.png" alt="Mask" />
+                <h2>Wear Mask</h2>
+            </div>
+            <div id="icon" class="wash">
+                <img src="./assets/wash-hand.png" alt="Hand-wash" />
+                <h2>Wash your hands</h2>
+            </div>
+            <div id="icon" class="dis-hand">
+                <img src="./assets/hand-dis.png" alt="Hand-disinfactant" />
+                <h2>Disinfect your hands</h2>
+            </div>
+            <div id="icon" class="dis-surf">
+                <img src="./assets/surface-dis.png" alt="Surface-disinfactant" />
+                <h2>Disinfect surfaces</h2>
+            </div>
+            <div id="icon" class="glove">
+                <img src="./assets/rubber-glove.png" alt="Gloves" />
+                <h2>Wear rubber Gloves</h2>
+            </div>
         </div>
     </main>
     <footer class="foot">
