--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <h1 class="head-text">Covid-19 Live Status</h1>
             </div>
             <div class="nav-sub">
-                <h3><a href="index.html" target="_blank">Home</a></h3>
-                <h3><a href="about.html" target="_blank">About</a></h3>
+                <h3><a href="index.html">Home</a></h3>
                 <h3><a href="precaution.html" target="_blank">Precautions</a></h3>
                 <h3><a href="symptoms.html" target="_blank">Symptoms</a></h3>
             </div>
